Add macro grid layout

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <title>Odin Dashboard</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>Header</header>
+    <aside>Aside</aside>
+    <main>Main</main>
+  </body>
 </html>
