--- a/index.html
+++ b/index.html
@@ -17,15 +17,55 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- Personal CSS -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="header">Header</header>
-    <aside class="aside">Aside</aside>
+    <!-- HEADER -->
+    <header class="header"></header>
+    <!-- ASIDE -->
+    <aside class="aside">
+      <h2><i class="fa-solid fa-table-columns"></i> Dashboard</h2>
+      <nav class="aside__nav">
+        <ul class="aside__list">
+          <li class="aside__list-item">
+            <i class="fa-solid fa-house"></i> Home
+          </li>
+          <li class="aside__list-item">
+            <i class="fa-solid fa-address-card"></i> Profile
+          </li>
+          <li class="aside__list-item">
+            <i class="fa-solid fa-message"></i> Messages
+          </li>
+          <li class="aside__list-item">
+            <i class="fa-solid fa-clock-rotate-left"></i> History
+          </li>
+          <li class="aside__list-item">
+            <i class="fa-solid fa-list-check"></i> Tasks
+          </li>
+          <li class="aside__list-item">
+            <i class="fa-solid fa-people-group"></i> Communities
+          </li>
+        </ul>
+      </nav>
+      <nav class="aside__nav">
+        <ul class="aside__list">
+          <li class="aside__list-item">
+            <i class="fa-solid fa-gear"></i> Settings
+          </li>
+          <li class="aside__list-item">
+            <i class="fa-solid fa-circle-question"></i> Support
+          </li>
+          <li class="aside__list-item">
+            <i class="fa-solid fa-shield"></i> Privacy
+          </li>
+        </ul>
+      </nav>
+    </aside>
+    <!-- MAIN -->
     <main class="main">Main</main>
   </body>
 </html>
