Add first header markup

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="header"></header>
+    <header class="header">
+      <div class="header-container">
+        <div class="search-container">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <input type="text" />
+        </div>
+        <div class="search-user-container">
+          <i class="fa-solid fa-bell"></i>
+          <img src="imgs/avatar-1.webp" alt="user avatar" />
+          <p>John Doe</p>
+        </div>
+      </div>
+      <div class="header-container"></div>
+    </header>
     <!-- ASIDE -->
     <aside class="aside">
       <h2><i class="fa-solid fa-table-columns"></i> Dashboard</h2>
