Build search user styles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </div>
         <div class="search-user-container">
           <i class="fa-solid fa-bell"></i>
-          <img src="imgs/avatar-1.webp" alt="user avatar" />
+          <div>
+            <img src="imgs/avatar-1.webp" alt="user avatar" />
+          </div>
           <p>John Doe</p>
         </div>
       </div>
