--- a/index.html
+++ b/index.html
@@ -39,7 +39,22 @@
           <p>John Doe</p>
         </div>
       </div>
-      <div class="header-container"></div>
+      <div class="header-container">
+        <div class="user-container">
+          <div>
+            <img src="imgs/avatar-1.webp" alt="user avatar" />
+          </div>
+          <div class="user-txt">
+            <p class="greeting">Hi there,</p>
+            <p class="user-name">John Doe (@john)</p>
+          </div>
+        </div>
+        <div class="actions-container">
+          <button class="btn">New</button>
+          <button class="btn">Upload</button>
+          <button class="btn">Share</button>
+        </div>
+      </div>
     </header>
     <!-- ASIDE -->
     <aside class="aside">
