Build header styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="header-container">
         <div class="user-container">
-          <div>
+          <div class="avatar-div">
             <img src="imgs/avatar-1.webp" alt="user avatar" />
           </div>
           <div class="user-txt">
