Build initial main section styles

--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
       </nav>
     </aside>
     <!-- MAIN -->
-    <main class="main">Main</main>
+    <main class="main">
+      <section class="cards">
+        <h2 class="cards__title">Your Projects</h2>
+      </section>
+      <aside class="side-menus">
+        <section class="announcements">
+          <h2 class="announcements__title">Announcements</h2>
+        </section>
+        <section class="trending">
+          <h2 class="trending__title">Trending</h2>
+        </section>
+      </aside>
+    </main>
   </body>
 </html>
