Build card styles

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
     <main class="main">
       <section class="cards">
         <h2 class="cards__title">Your Projects</h2>
+        <article class="card">
+          <h3 class="card__title">Blog App</h3>
+          <p class="card__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+            consectetur illo, quis sit blanditiis alias labore accusamus ducimus
+            accusantium ipsum?
+          </p>
+          <div class="card__actions">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-eye"></i>
+            <i class="fa-solid fa-share-nodes"></i>
+          </div>
+        </article>
       </section>
       <aside class="side-menus">
         <section class="announcements">
