Build announcements styles

--- a/index.html
+++ b/index.html
@@ -157,6 +157,25 @@
       <aside class="side-menus">
         <section class="announcements">
           <h2 class="announcements__title">Announcements</h2>
+          <div class="announcements__container">
+            <h3>Site Maintenance</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Provident rem delectus, aspernatur odit est praesentium.
+            </p>
+            <hr />
+            <h3>DDOS Protection</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Provident rem delectus, aspernatur odit est praesentium.
+            </p>
+            <hr />
+            <h3>Blog Update</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Provident rem delectus, aspernatur odit est praesentium.
+            </p>
+          </div>
         </section>
         <section class="trending">
           <h2 class="trending__title">Trending</h2>
