Build trending styles

--- a/index.html
+++ b/index.html
@@ -163,22 +163,39 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Provident rem delectus, aspernatur odit est praesentium.
             </p>
-            <hr />
-            <h3>DDOS Protection</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Provident rem delectus, aspernatur odit est praesentium.
-            </p>
-            <hr />
-            <h3>Blog Update</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Provident rem delectus, aspernatur odit est praesentium.
-            </p>
           </div>
         </section>
         <section class="trending">
           <h2 class="trending__title">Trending</h2>
+          <div class="trending__log">
+            <div class="trending__item">
+              <div class="trending__avatar green">
+                <img src="imgs/avatar-2.webp" alt="user avatar" />
+              </div>
+              <div>
+                <p class="avatar__heading">@Whompf</p>
+                <p class="avatar__text">Rust Developer</p>
+              </div>
+            </div>
+            <div class="trending__item">
+              <div class="trending__avatar blue">
+                <img src="imgs/avatar-3.webp" alt="user avatar" />
+              </div>
+              <div>
+                <p class="avatar__heading">@Sticks</p>
+                <p class="avatar__text">Log Chopper</p>
+              </div>
+            </div>
+            <div class="trending__item">
+              <div class="trending__avatar violet">
+                <img src="imgs/avatar-4.webp" alt="user avatar" />
+              </div>
+              <div>
+                <p class="avatar__heading">@Margos</p>
+                <p class="avatar__text">Pizza Chef</p>
+              </div>
+            </div>
+          </div>
         </section>
       </aside>
     </main>
